package com.pluralsight.delilicious;

abstract public class Item {

    abstract public double getprice();
}


