package com.pluralsight.delilicious;

public class Program {
    public static void main(String[] args) {
        // Call the main method of TerminalUI to start the program
        TerminalUI.main();
    }
}
