package com.pluralsight.delilicious;

public enum RegularToppingsOptions {
    LETTUCE,
    MUSHROOMS,
    GUACAMOLE,
    PICKLES,
    CUCUMBERS,
    JALAPENOS,
    TOMATOES,
    ONIONS,
    PEPPERS
}
