package com.pluralsight.delilicious;

public enum Sauce {
    MAYO,
    MUSTARD,
    RANCH,
    VINAIGRETTE,
    AU_JUS,
    KETCHUP
}
